<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/release_date"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vote_average"
            android:textColor="@color/primaryDarkColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/release_date"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <Button
            android:id="@+id/favorite_button"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mark_as_favorite"
            app:layout_constraintStart_toStartOf="@+id/vote_average"
            app:layout_constraintTop_toBottomOf="@+id/vote_average" />

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primaryLightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="84dp"
                android:layout_height="49dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/movie_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/vote_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_rate"
            android:textSize="16sp"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintStart_toEndOf="@+id/vote_average"
            app:layout_constraintTop_toTopOf="@+id/vote_average" />

        <TextView
            android:id="@+id/trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Trailers:"
            app:layout_constraintStart_toStartOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/overview"
            app:layout_constraintStart_toStartOf="@+id/overview"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_movie_trailers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/trailers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>